--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div class="bg-white px-20 flex ai-center py-10">
                         <div class="short-name radius-circle bg-primary font-white font-14 no-shrink mr-10 text-center"><span>子媛</span></div>
                         <div class="flex-1 font-14">
-                            <div class="font-dark"> 丛子媛 </div>
+                            <div class="font-dark"> 王涵 </div>
                             <div class="font-normal"> 女生202401701068 </div>
                         </div>
                     </div>
